--- a/components/tempPics/index.wxml
+++ b/components/tempPics/index.wxml
@@ -1,4 +1,4 @@
-<view class='temp-pics-wrapper' bindtap='goTo' data-id="{{ data.target.id }}">
+<view class='temp-pics-wrapper' bindtap='goTo' data-id="{{ data.target.id }}" data-layout="{{ data.layout }}">
   <view class='pics-wrapper'>
     <view class='left'>
       <image class='cover-image' src='{{ data.target.cover_url }}'></image>
