--- a/components/tempText/index.wxml
+++ b/components/tempText/index.wxml
@@ -1,4 +1,4 @@
-<view class='template-text-wrapper' bindtap='goTo' data-id="{{ data.target.id }}">
+<view class='template-text-wrapper' bindtap='goTo' data-id="{{ data.target.id }}" data-layout="{{ data.layout }}" >
   <view class='top'>
     <view class='inner-left'>
       <view class='inner-top'>{{ data.title }}</view>
