--- a/pages/article/article.wxss
+++ b/pages/article/article.wxss
@@ -1,1 +1,55 @@
-/* pages/article/article.wxss */
+@import '/utils/wxParse/wxParse.wxss';
+
+.article-wrapper {
+  padding: 0 18px;
+}
+.title {
+  margin: 30px 0 5px;
+  font-size: 24px;
+  line-height: 32px;
+  word-break: break-all;
+}
+.info {
+  display: flex;
+  align-items: center;
+  height: 22px;
+  line-height: 26px;
+  margin-bottom: 20px;
+}
+.info > .author {
+  color: #494949;
+  font-size: 15px;
+}
+.info > .date {
+  color: #ccc;
+  margin-left: 5px;
+}
+.main > .wxParse-style {
+  display: none;
+}
+.main > .wxParse-div > .wxParse-p {
+  margin-bottom: 25px;
+  color: #494949;
+  font-size: 18px;
+  line-height: 1.7;
+}
+.main > .copyright > .text {
+  font-size: 15px;
+  color: #aaa;
+  margin: 15px 0;
+  line-height: 1.2;
+  text-align: justify;
+  padding-top: 16px;
+  margin-top: 27px!important;
+  position: relative;
+}
+.main > .copyright > .text::before {
+  content: '';
+  display: block;
+  border-top: 1px solid rgba(0,0,0,0.08);
+  width: 60px;
+  height: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
