--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,5 +1,8 @@
 <view class='home-wrapper'>
   <view class='{{ index !== 0 ? "item" : "" }}' wx:for='{{ dataList }}' wx:key="{{ index }}">
+    <block wx:if="{{ !!item._dateKey }}">
+      <text class='date-title'>{{ item._dateKey }}</text>
+    </block>
     <temp-text wx:if="{{ item.layout === 1 }}" data="{{ item }}" />
     <temp-pics wx:if="{{ item.layout === 5 }}" data="{{ item }}" />
   </view>
