--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -15,3 +15,8 @@
   transform: scaleY(0.5);
   transform-origin: 0 bottom;
 }
+.date-title {
+  display: block;
+  /* margin: 10px auto; */
+  text-align: center;
+}
