--- a/pages/article/article.wxml
+++ b/pages/article/article.wxml
@@ -15,10 +15,12 @@
   </view>
 </view>
 <view wx:else class='image-article-wrapper'>
-  <view class='item' wx:for="{{ imageList }}" wx:key="intex" wx:if="{{ index % 2 !== 0 }}">
-    <image src='{{ item }}' bin mode='widthFit'></image>
-  </view>
-  <view class='item' wx:for="{{ imageList }}" wx:key="intex" wx:if="{{ index % 2 === 0 }}">
-    <image src='{{ item }}' mode='widthFit'></image>
-  </view>
+  <!-- <block wx:for="{{ imageList }}" wx:key="{{ index }}">
+    <image src='{{ item }}' class='image' mode='widthFix'></image>
+  </block> -->
+  <block wx:for="{{ imageList }}" wx:key="{{ index }}">
+    <view class='item'>
+      <image src='{{ item }}' mode='widthFix'></image>
+    </view>
+  </block>
 </view>
