--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,3 +1,5 @@
+<import src="/utils/wxParse/wxParse.wxml" />
+
 <view class="search-wrapper">
   <view class='header'>
     <text class='text' bindtap="goTo">搜索</text>
@@ -10,4 +12,5 @@
       <category-item title="{{ item.title }}" desc="{{ item.desc }}" color="{{ item.color }}" />
     </view>
   </view>
+  <template is="wxParse" data="{{ wxParseData: result.nodes }}" />
 </view>
