新增搜索结果页

--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,4 +1,3 @@
-<import src="/utils/wxParse/wxParse.wxml" />
 
 <view class="search-wrapper">
   <view class='header'>
@@ -7,10 +6,9 @@
       <input class='input' type='text' bindblur='onBlur' bindfocus='onFocus' bindconfirm='onConfirm'></input>
     </view>
   </view>
-  <view class='category-container' wx:if="{{ !isShowResult }}">
+  <view class='category-container'>
     <view class='category-item' wx:for="{{ category }}" wx:key="{{ item.title }}">
       <category-item title="{{ item.title }}" desc="{{ item.desc }}" color="{{ item.color }}" />
     </view>
   </view>
-  <template wx:if="{{ isShowResult }}" is="wxParse" data="{{ wxParseData: result.nodes }}" />
 </view>
