--- a/utils/wxParse/wxParse.wxml
+++ b/utils/wxParse/wxParse.wxml
@@ -9,6 +9,8 @@
  * detail : http://weappdev.com/t/wxparse-alpha0-1-html-markdown/184
  */-->
 
+ <import src="/templates/star/star.wxml" />
+
 <!--基础元素-->
 <template name="wxParseVideo">
   <!--增加video标签支持，并循环添加-->
@@ -1119,40 +1121,4 @@
     <template is="WxEmojiView" data="{{item}}" />
   </block>
 
-</template>
-
-<wxs module="star">
-  function myParseNum(str) {
-    return Number(str)
-  }
-  function myIsNaN(num) {
-    return isNaN(num)
-  }
-  function starArr(score) {
-    var stars = Math.ceil(score) / 2
-    var hasDecimal = stars % 1 !== 0
-    var temp_arr = []
-    for (var i = 0; i < Math.floor(stars); i++) {
-      temp_arr.push('all-star')
-    }
-    if (hasDecimal) {
-      temp_arr.push('half-star')
-    }
-    while(temp_arr.length < 5) {
-      temp_arr.push('none-star')
-    }
-    return temp_arr
-  }
-  module.exports = {
-    myParseNum: myParseNum,
-    myIsNaN: myIsNaN,
-    starArr: starArr
-  }
-</wxs>
-<template name="star">
-  <block wx:if="{{ !star.myIsNaN(star.myParseNum(item.text)) }}">
-    <view class='star-wrapper'>
-      <text wx:for="{{ star.starArr(star.myParseNum(item.text)) }}" class='star-item {{item}}' wx:key="{{index}}"></text>
-    </view>
-  </block>
 </template>
