--- a/utils/wxParse/wxParse.wxss
+++ b/utils/wxParse/wxParse.wxss
@@ -10,6 +10,8 @@
  * detail : http://weappdev.com/t/wxparse-alpha0-1-html-markdown/184
  */
 
+ @import '/templates/star/star.wxss';
+
 .wxParse{
     margin: 0 5px;
     font-family: Helvetica,sans-serif;
