--- a/components/categorySearch/index.wxml
+++ b/components/categorySearch/index.wxml
@@ -1,4 +1,4 @@
-<view class="category-search">
+<view class="category-search" bindtap='goTo'>
   <text class='title' style='color:{{color}}'>{{ title }}</text>
   <text class='desc'>{{ desc }}</text>
 </view> 
